# python-ssvc

./: .coverage  .gitignore  Containerfile  LICENSE  Makefile  PYPI.md  README.md  justfile  osv.sarif.json  pyproject.toml  requirements-dev.txt  requirements.txt  sbom.cdx.json  sbom.json  sbom.spdx.json
.devcontainer/: devcontainer.json
.github/: pytest.yml
.github/workflows/: action.yml  ci.yml  codeql.yml  pytest.yml  sca.yml
docs/: ai_llm_triage.md  cisa.md  coordinator_publication.md  coordinator_triage.md  deployer.md  supplier.md
scripts/: generate_plugins.py  validate_methodologies.py
src/ssvc/: __init__.py  core.py  legacy.py  ssvc.py
src/ssvc/methodologies/: ai_llm_triage.yaml  cisa.yaml  coordinator_publication.yaml  coordinator_triage.yaml  deployer.yaml  schema.json  supplier.yaml
src/ssvc/plugins/: __init__.py  ai_llm_triage.py  cisa.py  coordinator_publication.py  coordinator_triage.py  deployer.py  supplier.py
tests/: test_ssvc.py  test_ssvc_legacy.py  test_ssvc_new.py
