[tool.poetry]
name = "ssvc"
version = "1.0.10"
description = "A Python implementation of the Stakeholder-Specific Vulnerability Categorization framework."
authors = ["Christopher Langton <chris@langton.cloud>"]
readme = "PYPI.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
setuptools = ">=69.5.1,<75.0.0"
uv = ">=0.2.4,<0.5.0"
isort = "^5.13.2"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
coverage-badge = "^1.1.2"
ruff = ">=0.4.5,<0.6.0"
pip-audit = "^2.7.3"
poetry = "^1.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Repository" = "https://github.com/chrisdlangton/python-ssvc.git"
