[project]
name = "ssvc"
version = "1.0.11"
description = "A Python implementation of the Stakeholder-Specific Vulnerability Categorization framework."
authors = [{name = "Christopher Langton", email = "chris@vulnetix.app"}]
readme = "PYPI.md"
requires-python = ">=3.11"
dependencies = [
]
license = {file = "LICENSE"}

[project.optional-dependencies]
test = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "coverage-badge>=1.1.2",
]
sec = [
    "pip-audit>=2.7.3",
]

[project.urls]
Homepage = "https://www.vulnetix.com"
Repository = "https://github.com/vulnetix/python-ssvc.git"
